--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>Admin Portal</h3>
+            <h4>Siddiqui Associates</h4>
         </div>
         <ul class="list-unstyled components">
             <li>
@@ -42,7 +42,7 @@
                 <a [routerLink]="['/fileexpenditure']">File Expenditure</a>
             </li>
             <li>
-                <a [routerLink]="['/totalexpenditures']">Total Expenditures</a>
+                <a [routerLink]="['/totalexpenditure']">Total Expenditures</a>
             </li>
 
             <li>
