--- a/src/app/content-nav/content-nav.component.html
+++ b/src/app/content-nav/content-nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container-fluid">
         <button type="button" id="sidebarCollapse" class="navbar-btn">
             <span></span>
@@ -10,9 +10,9 @@
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a href="#" class="nav-link">Pets</a>
                 </li>
                 <li class="nav-item">
@@ -23,14 +23,12 @@
                 </li>
                 <li id="sign_up_btn" class="nav-item">
                     <a href="~/user/register" class="nav-link">Sign Up</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
-                    <a id="login-logout" href="~/login" class="nav-link">Login</a>
+                    <a (click)="logout()"><i class="fas fa-sign-out-alt"></i></a>
                 </li>
             </ul>
-        </div> -->
+        </div>
     </div>
 </nav>
-<div class="container col-12">
-    <router-outlet></router-outlet>
-</div>
+
